Increase permgen for unit test